crates/lang/tests/ui/contract/fail/trait-message-selector-overlap-3.stderr
error[E0119]: conflicting implementations of trait `ink_lang::reflect::DispatchableMessageInfo<42_u32>` for type `contract::Contract`
  --> tests/ui/contract/fail/trait-message-selector-overlap-3.rs:47:9
   |
42 |         fn message1(&self) {}
   |         ------------------ first implementation here
...
47 |         fn message2(&self) {}
   |         ^^^^^^^^^^^^^^^^^^ conflicting implementation for `contract::Contract`

error[E0119]: conflicting implementations of trait `ink_lang::codegen::TraitCallForwarderFor<42_u32>` for type `contract::_::CallBuilder`
  --> tests/ui/contract/fail/trait-message-selector-overlap-3.rs:45:5
   |
40 |     impl TraitDefinition1 for Contract {
   |     ---------------------------------- first implementation here
...
45 |     impl TraitDefinition2 for Contract {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `contract::_::CallBuilder`
